force-app/main/default/objects/Account/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Primary Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Leather Goods &amp; Accessories</fullName>
                <label>Accessories</label>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Beauty &amp; Skincare</fullName>
            </value>
            <value>
                <fullName>Eyewear</fullName>
            </value>
            <value>
                <fullName>Food And Drink</fullName>
            </value>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Homewares</fullName>
            </value>
            <value>
                <fullName>Innovative Concepts</fullName>
            </value>
            <value>
                <fullName>Intimates And Hosiery</fullName>
            </value>
            <value>
                <fullName>Leather Goods</fullName>
            </value>
            <value>
                <fullName>Sports / Active</fullName>
            </value>
            <value>
                <fullName>Swimwear</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Travel / Luggage</fullName>
            </value>
            <value>
                <fullName>Watches &amp; Jewellery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>