force-app/main/default/objects/Account/fields/Do_Not_Allow_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Allow_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(B2B use only) If this is TRUE then do not allow the Account to be looked up in the contact&apos;s account filter. Hopefully this will block the creation of contacts below these accounts</description>
    <inlineHelpText>Set to true if you do not want to allow contacts to be linked to this account</inlineHelpText>
    <label>Do Not Allow Contacts</label>
    <type>Checkbox</type>
</CustomField>