force-app/main/default/objects/Account/fields/DO_NOT_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>DO_NOT_CONTACT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the guest should not be contacted</description>
    <inlineHelpText>Private Client should NOT be contacted</inlineHelpText>
    <label>DO NOT CONTACT</label>
    <type>Checkbox</type>
</CustomField>