force-app/main/default/objects/Account/fields/Domestic_International_Partner__c.field-meta.xml
<CustomField>
    <fullName>Domestic_International_Partner__c</fullName>
    <inlineHelpText>Enter whether the partner is domestic or international.</inlineHelpText>
    <label>Domestic or International Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>