force-app/main/default/objects/Account/fields/Domestic_or_International__c.field-meta.xml
<CustomField>
    <fullName>Domestic_or_International__c</fullName>
    <label>Domestic or International</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>