force-app/main/default/objects/Account/fields/Duplicate_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Set the Account of which this one is a duplicate of.</inlineHelpText>
    <label>Duplicate of Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select the Partner Account</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Tourism</value>
        </filterItems>
        <filterItems>
            <field>Account.Duplicate_of_Account__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>Select a Partner account that this account duplicates.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Duplicates</relationshipLabel>
    <relationshipName>Duplicates</relationshipName>
    <type>Lookup</type>
</CustomField>