force-app/main/default/objects/Account/fields/Entitled_Services__c.field-meta.xml
<CustomField>
    <fullName>Entitled_Services__c</fullName>
    <description>The VIP services that the guest is entitled to use</description>
    <inlineHelpText>The VIP services that the guest is entitled to use. select multiple</inlineHelpText>
    <label>Services Entitled To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VIP_Services</valueSetName>
    </valueSet>
</CustomField>