force-app/main/default/objects/Account/fields/EU_Brand_Captain__c.field-meta.xml
<CustomField>
    <fullName>EU_Brand_Captain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EU Brand Captain</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Users setup as Brand Captains are shown. Please contact the System Administrator if the Brand Captain is not shown</errorMessage>
        <filterItems>
            <field>User.Brand_Captain__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please Select a Brand Captain</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>