force-app/main/default/objects/Account/fields/FFP_Partner__c.field-meta.xml
<CustomField>
    <fullName>FFP_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FFP Partner</label>
    <type>Checkbox</type>
</CustomField>