force-app/main/default/objects/Account/fields/Fiscal_End_date__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_End_date__c</fullName>
    <label>Fiscal End date</label>
    <type>Date</type>
</CustomField>