force-app/main/default/objects/Account/fields/Fiscal_End_Date_Workflow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_End_Date_Workflow_Trigger__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fiscal End Date Workflow Trigger</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>