force-app/main/default/objects/Account/fields/Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Free_Text__c</fullName>
    <label>Free Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>