force-app/main/default/objects/Account/fields/Friends_and_Family__c.field-meta.xml
<CustomField>
    <fullName>Friends_and_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether account is associated with pool of friend and family contacts.</description>
    <inlineHelpText>Indicate whether account is associated with pool of friend and family contacts.</inlineHelpText>
    <label>Friends and Family</label>
    <type>Checkbox</type>
</CustomField>