force-app/main/default/objects/Account/fields/Full_Price_Disc_Discount_Comment__c.field-meta.xml
<CustomField>
    <fullName>Full_Price_Disc_Discount_Comment__c</fullName>
    <inlineHelpText>Describe any details related to the brands interest in Full Price or Discretionary Discount</inlineHelpText>
    <label>Full Price/Disc Discount Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>