force-app/main/default/objects/Account/fields/Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Funding Program</label>
    <referenceTo>Funding_Program__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>