force-app/main/default/objects/Account/fields/Funding_Program_Lightning__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program_Lightning__c</fullName>
    <label>Funding Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funding_Program_Value_Set</valueSetName>
    </valueSet>
</CustomField>