force-app/main/default/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Customer&apos;s gender</description>
    <inlineHelpText>Customer&apos;s gender</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Non-binary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>