force-app/main/default/objects/Account/fields/Gender_Classification__c.field-meta.xml
<CustomField>
    <fullName>Gender_Classification__c</fullName>
    <label>Gender Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Gender</fullName>
                <default>true</default>
                <label>Mixed</label>
            </value>
            <value>
                <fullName>Kids</fullName>
                <label>Children&apos;s</label>
            </value>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>