force-app/main/default/objects/Account/fields/Global_Partner__c.field-meta.xml
<CustomField>
    <fullName>Global_Partner__c</fullName>
    <label>Global Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>