force-app/main/default/objects/Account/fields/Group_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Group_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check if this Brand falls into the group marketing remit</inlineHelpText>
    <label>Group Marketing</label>
    <type>Checkbox</type>
</CustomField>