force-app/main/default/objects/Account/fields/GRS_Captain__c.field-meta.xml
<CustomField>
    <fullName>GRS_Captain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GRS Captain</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brands3</relationshipName>
    <type>Lookup</type>
</CustomField>