force-app/main/default/objects/Account/fields/GRS_Category__c.field-meta.xml
<CustomField>
    <fullName>GRS_Category__c</fullName>
    <inlineHelpText>Select the relevant value if this is a GRS or Acting GRS brand otherwise leave blank or set to other</inlineHelpText>
    <label>GRS Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GRS Volume Brands</fullName>
            </value>
            <value>
                <fullName>GRS Italian Brands</fullName>
            </value>
            <value>
                <fullName>GRS French Brands</fullName>
            </value>
            <value>
                <fullName>GRS Development Brands</fullName>
            </value>
            <value>
                <fullName>Acting GRS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>