force-app/main/default/objects/Account/fields/Guest_Introduced_By__c.field-meta.xml
<CustomField>
    <fullName>Guest_Introduced_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>a link to the person who introduced the guest</description>
    <inlineHelpText>who introduced the guest?</inlineHelpText>
    <label>Guest Introduced By</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The guest must be a VIP guest</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>VIP Guest</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Guest Introduced By)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>