force-app/main/default/objects/Account/fields/Guest_Segment__c.field-meta.xml
<CustomField>
    <fullName>Guest_Segment__c</fullName>
    <description>which Segment each HNW Guest belongs to</description>
    <inlineHelpText>Private Client – spend more than €5k annually
Private Client Elite – spend more than €20k annually
General Guest - Membership Level 1, 2 and 3 (spend below €5k annually)</inlineHelpText>
    <label>Guest Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Client Elite</fullName>
            </value>
            <value>
                <fullName>Private Client</fullName>
            </value>
            <value>
                <fullName>General Guest</fullName>
            </value>
            <value>
                <fullName>Style Addict</fullName>
                <isActive>false</isActive>
                <label>Style Addict</label>
            </value>
            <value>
                <fullName>Style Connoisseur</fullName>
                <isActive>false</isActive>
                <label>Style Connoisseur</label>
            </value>
            <value>
                <fullName>Style Elite</fullName>
                <isActive>false</isActive>
                <label>Style Elite</label>
            </value>
            <value>
                <fullName>Style Lover</fullName>
                <isActive>false</isActive>
                <label>Style Lover</label>
            </value>
            <value>
                <fullName>Value Hungry</fullName>
                <isActive>false</isActive>
                <label>Value Hungry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>