force-app/main/default/objects/Account/fields/Guest_Source__c.field-meta.xml
<CustomField>
    <fullName>Guest_Source__c</fullName>
    <inlineHelpText>What is the reason for the VIP Account registration?</inlineHelpText>
    <label>Guest Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand_Event</fullName>
                <label>Brand Event</label>
            </value>
            <value>
                <fullName>Brand_Referral</fullName>
                <label>Brand Referral</label>
            </value>
            <value>
                <fullName>Brand Support</fullName>
            </value>
            <value>
                <fullName>Word_of_Mouth</fullName>
                <label>Guest Referral</label>
            </value>
            <value>
                <fullName>In_Village_Referral</fullName>
                <label>In Village Referral</label>
            </value>
            <value>
                <fullName>Marketing_Activity</fullName>
                <label>Marketing Activity</label>
            </value>
            <value>
                <fullName>Village_Specific</fullName>
                <label>Membership</label>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Personal_Shopper</fullName>
                <label>Personal Shopper</label>
            </value>
            <value>
                <fullName>PR/Influencer</fullName>
            </value>
            <value>
                <fullName>P/C - Apartment (BV Only)</fullName>
                <label>Private Clients Team - Apartment</label>
            </value>
            <value>
                <fullName>P/C - PR (BV Only)</fullName>
                <label>Private Clients Team - PR</label>
            </value>
            <value>
                <fullName>P/C - Tourism (BV Only)</fullName>
                <label>Private Clients Team - Tourism</label>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
                <isActive>false</isActive>
                <label>Campaign</label>
            </value>
            <value>
                <fullName>Personal Shopping</fullName>
                <isActive>false</isActive>
                <label>Personal Shopping</label>
            </value>
            <value>
                <fullName>Private_Clients_Team</fullName>
                <isActive>false</isActive>
                <label>Private Clients Team</label>
            </value>
            <value>
                <fullName>Regular Guest</fullName>
                <isActive>false</isActive>
                <label>Regular Guest</label>
            </value>
            <value>
                <fullName>Special Event</fullName>
                <isActive>false</isActive>
                <label>Special Event</label>
            </value>
            <value>
                <fullName>VR Management Referral</fullName>
                <isActive>false</isActive>
                <label>VR Management Referral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>