force-app/main/default/objects/Account/fields/Guest_Source_Notes__c.field-meta.xml
<CustomField>
    <fullName>Guest_Source_Notes__c</fullName>
    <inlineHelpText>Capture any additional Source details here.</inlineHelpText>
    <label>Guest Source Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>