force-app/main/default/objects/Account/fields/Handles__c.field-meta.xml
<CustomField>
    <fullName>Handles__c</fullName>
    <description>Social Media Handles. For example &quot;@InfluencerName&quot;</description>
    <inlineHelpText>Social Media Handles. For example &quot;@InfluencerName&quot;</inlineHelpText>
    <label>Handles</label>
    <type>TextArea</type>
</CustomField>