force-app/main/default/objects/Account/fields/In_Administration__c.field-meta.xml
<CustomField>
    <fullName>In_Administration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Brand is known to be in administration</inlineHelpText>
    <label>In Administration</label>
    <type>Checkbox</type>
</CustomField>