force-app/main/default/objects/Account/fields/In_Administration_Comment__c.field-meta.xml
<CustomField>
    <fullName>In_Administration_Comment__c</fullName>
    <inlineHelpText>Record any comments related to the Brand being in administration</inlineHelpText>
    <label>In Administration Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>