force-app/main/default/objects/Account/fields/In_Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>In_Funding_Program__c</fullName>
    <formula>NOT (ISBLANK(TEXT( Funding_Program_Lightning__c)))</formula>
    <inlineHelpText>An automated field that checks whether the account is in the Funding Program</inlineHelpText>
    <label>In Funding Program</label>
    <type>Checkbox</type>
</CustomField>