force-app/main/default/objects/Account/fields/Integration_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Salesforce_Id__c</fullName>
    <description>Value of Salesforce Id returned by Microservice. This value should match the actual Salesforce system Id. The value will be null if the value has not successfully been sent to the Microservice.</description>
    <inlineHelpText>Value of Salesforce Id returned by Microservice. This value should match the actual Salesforce system Id. The value will be null if the value has not successfully been sent to the Microservice.</inlineHelpText>
    <label>Integration Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>