force-app/main/default/objects/Account/fields/International_Position__c.field-meta.xml
<CustomField>
    <fullName>International_Position__c</fullName>
    <inlineHelpText>Select the position that best describes this brand, this setting is used to determine the steps requried in the lease/contract approval process</inlineHelpText>
    <label>International Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>