force-app/main/default/objects/Account/fields/Introduced_By__c.field-meta.xml
<CustomField>
    <fullName>Introduced_By__c</fullName>
    <description>Who introduced the guest to the VIP services</description>
    <inlineHelpText>Who introduced the guest to the VIP services</inlineHelpText>
    <label>Introduced By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>