force-app/main/default/objects/Account/fields/isAnonymised__c.field-meta.xml
<CustomField>
    <fullName>isAnonymised__c</fullName>
    <description>Flag that highlights if an account has been anonymised using the following patters:
Lastname = Del and Email/FirstName = null
Firstname, Lastname and first part of Email = ID
Firstname and Lastname = GUID</description>
    <formula>OR (
AND(IsPersonAccount = True, ISBLANK(PersonEmail), ISBLANK(FirstName ), LastName = $Label.AnonymizedString)
,
AND(Id = LEFT(FirstName,15), FirstName = LastName, OR(LOWER(FirstName) = LEFT(PersonEmail,18),ISBLANK(PersonEmail)))
,
AND(Customer_GUID__c=FirstName,FirstName=LastName)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isAnonymised</label>
    <type>Checkbox</type>
</CustomField>