force-app/main/default/objects/Account/fields/isDataCleanseRemove__c.field-meta.xml
<CustomField>
    <fullName>isDataCleanseRemove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to True if it&apos;s flagged to be removed</description>
    <label>is Data Cleanse Remove?</label>
    <type>Checkbox</type>
</CustomField>