force-app/main/default/objects/Account/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>The Guest Job Title</description>
    <inlineHelpText>The Guest Job Title</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>