force-app/main/default/objects/Account/fields/Last_action_date__c.field-meta.xml
<CustomField>
    <fullName>Last_action_date__c</fullName>
    <label>Last action date</label>
    <type>DateTime</type>
</CustomField>