force-app/main/default/objects/Account/fields/Last_action_type__c.field-meta.xml
<CustomField>
    <fullName>Last_action_type__c</fullName>
    <label>Last action type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>