force-app/main/default/objects/Account/fields/Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Review_Date__c</fullName>
    <description>The last time that this data was reviewed</description>
    <inlineHelpText>The last time that this data was reviewed</inlineHelpText>
    <label>Last Review Date</label>
    <type>Date</type>
</CustomField>