force-app/main/default/objects/Account/fields/Last_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>.</description>
    <label>Last Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>