force-app/main/default/objects/Account/fields/Last_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reviewed_Date__c</fullName>
    <description>.</description>
    <label>Last Reviewed Date</label>
    <type>DateTime</type>
</CustomField>