force-app/main/default/objects/Account/fields/Last_Spend__c.field-meta.xml
<CustomField>
    <fullName>Last_Spend__c</fullName>
    <description>Last spend value on Personal Shopping Visit by the account</description>
    <label>Last Spend on Personal Shopping Visit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>