force-app/main/default/objects/Account/fields/Last_Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Date_Time__c</fullName>
    <description>This field displays the last visit check-in date/time for the respective account</description>
    <inlineHelpText>This field displays the last visit check-in date/time for the respective account</inlineHelpText>
    <label>Last Visit Date/Time</label>
    <type>DateTime</type>
</CustomField>