force-app/main/default/objects/Account/fields/Lead_Source_Text__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Text__c</fullName>
    <description>Source of customer&apos;s original registration</description>
    <inlineHelpText>Source of customer&apos;s original registration</inlineHelpText>
    <label>Lead Source Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>