force-app/main/default/objects/Account/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_Detail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
                <label>Level 1</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
                <label>Level 2</label>
            </value>
            <value>
                <fullName>Level 1</fullName>
                <isActive>false</isActive>
                <label>Level 1 (deprecated)</label>
            </value>
            <value>
                <fullName>Level 2</fullName>
                <isActive>false</isActive>
                <label>Level 2 (deprecated)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>