force-app/main/default/objects/Account/fields/Leverage__c.field-meta.xml
<CustomField>
    <fullName>Leverage__c</fullName>
    <label>Account Leverage</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>