force-app/main/default/objects/Account/fields/Likelihood_to_visit_again__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_visit_again__c</fullName>
    <description>How likely is the guest going to want to visit again</description>
    <inlineHelpText>How likely is the guest going to want to visit again?</inlineHelpText>
    <label>Likelihood to visit again</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>