force-app/main/default/objects/Account/fields/Likely_to_recommend__c.field-meta.xml
<CustomField>
    <fullName>Likely_to_recommend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the guest likely to recommend the village to others</description>
    <inlineHelpText>Is the guest likely to recommend the village to others?</inlineHelpText>
    <label>Likely to recommend</label>
    <type>Checkbox</type>
</CustomField>