force-app/main/default/objects/Account/fields/Location_of_Permission__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Permission__c</fullName>
    <description>The location that the guest granted permission to hold this data</description>
    <inlineHelpText>The location that the guest granted permission to hold this data</inlineHelpText>
    <label>Location of Permission</label>
    <length>100</length>
    <type>Text</type>
</CustomField>