force-app/main/default/objects/Account/fields/Logo_Id__c.field-meta.xml
<CustomField>
    <fullName>Logo_Id__c</fullName>
    <label>Logo URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>