force-app/main/default/objects/Account/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>...</description>
    <inlineHelpText>The primary Market this partner will bring guests from. If multiple Markets are need please select &apos;other&apos;.</inlineHelpText>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Market</valueSetName>
    </valueSet>
</CustomField>