force-app/main/default/objects/Account/fields/Market_Position__c.field-meta.xml
<CustomField>
    <fullName>Market_Position__c</fullName>
    <inlineHelpText>Select the position that best describes the brand</inlineHelpText>
    <label>Price Positioning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accessible</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>